--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "prettier": "npx prettier --write **/*.{ts,tsx,json}",
     "prepare": "husky",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "bundle-analizer": "npx vite-bundle-visualizer"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.59.3",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
